# open-pearl-miner

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
csrc/capi/: p40_capi.cu
csrc/gemm/: api_sm61.cu  bindings.cpp  denoise_converter_host.h  dp4a_gemm_sm61.cu  error_check.hpp  noise_gemm_sm61.cu  noise_generation.cu  noise_generation_host.h  noising_sm61.cu  pearl_ampere_tc.cu  pearl_blake3_sm61.cu  pearl_cute_fold.cuh  pearl_cute_noise.cuh  pearl_gemm_only_sm61.cu  pearl_pow_fused_sm61.cu  pearl_pow_sm61.cu  quantize_kernel.cu  quantize_kernel.hpp  rng_fill_sm61.cu
csrc/tensor_hash/: merkle_tree_roots_kernel_sm61.hpp  merkle_tree_utils.hpp  tensor_hash.cu  tensor_hash_host_sm61.hpp
packaging/: README.md  build_capi.bat  build_capi.sh  build_linux.sh  build_windows.bat  p40-miner-lite.spec  p40-miner.spec  p40_miner_lite_main.py  p40_miner_main.py
packaging/hiveos/: Dockerfile.build  README.md  h-run.sh  (+7 more)
python/: __init__.py  _dev.py  cuda_capi.py  gateway_client.py  luckypool_miner.py  miner_capi.py  mining_config.py  p40_gemm_bindings.py  pearl_host.py  pearl_miner.py  pool_common.py  pool_experiment.py  pool_miner.py  pool_sniffer.py
tests/: bench_capi.py  bench_split.py  c1p2_cute.cu  c1p_cute.cu  cnoise_cute.cu  test_build.py  test_capi_phase1.py  test_capi_phase2.py  test_capi_phase3.py  test_capi_phase4.py  test_dev_fee.py  test_gemm_native.cu  test_module_e2e.py  test_noise_native.cu  test_pearl_pow.py  test_pearl_pow_split.py  test_pipeline_e2e.py  test_tensor_hash.py  test_transcript_compare.cu  test_valid_proof.py
tools/: pool_capture.py
