[build-system]
requires = ["setuptools", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "p40-pearl-gemm"
version = "0.1.0"
description = "Pascal P40-optimized CUDA kernels for Pearl (PRL) mining"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "blake3",
    "numpy",
]
